# CusipService

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docker/init/: 01-cusip_ddl.sql  03-cusip_views.sql  04-full_text_search.sql  05-postgrest_roles.sql
docs/: AWS_MULTI_ACCOUNT_SETUP.md  ECS_DEPLOYMENT_CHEATSHEET.md  bucket-policy.json  s3-read-policy.json
migrations/: env.py
migrations/versions/: 001_initial_schema.py
sql/: cusip_ref_data.sql
src/cusipservice/: __init__.py  __main__.py  config.py  file_discovery.py  file_source.py  loader.py
src/cusipservice/api/: __init__.py  dependencies.py  main.py  models.py
src/cusipservice/api/routers/: __init__.py  health.py  jobs.py
